Switch the main wrapper div to relative position to fix an amination bug on mobile.

--- a/resources/public/toto-desktop.css
+++ b/resources/public/toto-desktop.css
@@ -184,11 +184,11 @@ span#item_age {
 }
 
 
-span.completed_item {
+div.completed_item {
     text-decoration: line-through;
 }
 
-span.deleted_item {
+div.deleted_item {
     text-decoration: line-through;
     color: #c0c0c0;
 }
